src/avm2/tests/regress/correctness/fail/coerce-1.as
package {
  class A {
    function foo(a: Class, b: A) {
      trace(a);
      trace(b);
    }
  }
  (new A()).foo(A, new A());
}